By default, new DNS zones only allow localhost, hosts on the local network and known slaves to transfer records.
All text in the Virtualmin user interface is now available in Dutch, thanks to Gandyman.
The remote hosts from which connections to MySQL are allowed can be easily edited on a per-domain basis on the Edit Databases page, in the new 'Remote hosts' tab. These apply to the domain owner and any mailboxes with database access. The modify-database-hosts.pl command can also be used to edit them from the shell or API.
Old local file and S3 backups created using date-based filenames can now be automatically deleted if older than a selected number of days, configurable on the Scheduled Backups page.
---- Changes since 3.58 ----
The PHP modules and Pear modules available for each domain are now displayed on the Website Options page.
Plesk 7 backups can now be migrated as Virtualmin domains, using a new backup file type on the migration page.
Updated the Piwik script installer to version 0.2.3, Magento to 1.0.19870.4, PHPCoin to 1.4.3, Gallery to 2.2.5, Horde to 3.2.1, Turba to 2.2.1, Mantis to 1.1.2, SugarCRM to 5.0.0f, Movable Type to 4.12, and Trac to version 0.11rc2.
Added a script installer for Zikula, a new content management system written in PHP.
Allow the default shell to be set on a per-template basis.
Added a complete Spanish translation, contributed by Ignacio.
The bandwidth usage graphs can be restricted to showing just servers that are over their limits, using a new mode link.
Move some rarely-used options to the Advanced section of the Module Config page.