@@ -1,0 +1,13 @@
+<header>Additional manually configured nameservers</header>
+
+If you are manually configuring other nameservers to be secondaries for
+domains created using Virtualmin, you should add their hostnames to this text
+box. This will ensure that the required <tt>NS</tt> records are added to the
+DNS zone, and that that the secondaries are used. <p>
+
+If you have configured Webmin to automatically create slave domains on
+secondary nameservers, their hostnames do not need to be entered here. Instead,
+Virtualmin will add them to the DNS zone automatically. <p>
+
+<footer>
+
