@@ -942,3 +942,4 @@ Allow the default shell to be set on a per-template basis.
 Added a complete Spanish translation, contributed by Ignacio.
 The bandwidth usage graphs can be restricted to showing just servers that are over their limits, using a new mode link.
 Move some rarely-used options to the Advanced section of the Module Config page.
+Additional manually configured nameservers can now be more easily entered in server templates, in the BIND DNS domain section.
